--- a/Front/src/app/welcome-page/welcome-page.component.css
+++ b/Front/src/app/welcome-page/welcome-page.component.css
@@ -24,7 +24,7 @@
   font-size: 28px;
   font-weight: 600;
   color: snow;
-  background-color: rgba(15, 80, 115, 0.4);
+  background-color: rgb(56, 102, 128, 0.55);
   border-radius: 15px;
   width: 70%;
   max-height: 80px;
